# MIDI-Generation-Plugin

./: .gitignore
DIPLOM SPACE/: .cursorignore  .cursorrules  .gitignore  CURSOR_GUIDE.md  CURSOR_SETUP.md  PHASE1_COMPLETE.md  PLUGIN_ARCHITECTURE.md  README.md  sample_09_arrangement_trap.json
DIPLOM SPACE/dataset/: _parse_single_midi.py  analyze_dataset.py  chunk_tokens.py  chunk_tokens_full.py  preprocess_full.py  preprocess_midi.py  split_full_tokens.py  tokenize_midi.py  tokenize_midi_full.py
DIPLOM SPACE/dataset/processed/: vocab.json
DIPLOM SPACE/model/: check_architecture.py  dataset.py  evaluate_generation.py  export_torchscript.py  generate.py  generate_full.py  train_full.py  train_improved.py  transformer.py
DIPLOM SPACE/plugin/juce/: CMakeLists.txt  README_PHASE1.md
DIPLOM SPACE/plugin/juce/Source/: AnalogLookAndFeel.cpp  AnalogLookAndFeel.h  AnimatedKnob.h  GeneratorThread.cpp  GeneratorThread.h  MidiFileExporter.cpp  MidiFileExporter.h  MidiGenerator.cpp  MidiGenerator.h  MidiPostProcessor.cpp  MidiPostProcessor.h  MidiVisualizer.cpp  MidiVisualizer.h  ModelInference.cpp  ModelInference.h  OutputWindow.cpp  OutputWindow.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RotaryKnob.cpp  RotaryKnob.h
